feat(BCHEP-675): Add screened_in_at filters and status to search/summary APIs. Fixed a bug with the from date in API's that used submitted at. Documented the Search api structure
